added toolbar to views, added dimensions to sverel views, reformated fogrott password view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="tb_toolbar_logout_text">Logout</string>
 
     <!-- MAIN SCREEN-->
-    <string name="ml_main_choose">Choose your Sport</string>
+    <string name="ml_main_choose">Choose your Sport:</string>
     <string name="tv_main_login_text">Logged in Sucessfully!</string>
 
     <!-- LOGIN SCREEN -->
